# Free-ImagesGen

./: .env.example  .gitignore  README.md  pyproject.toml
integrations/skill/: SKILL.md
integrations/skill/agents/: openai.yaml
src/free_imagegen/: __init__.py  _engine.py  api.py  cli.py  llm.py  llm_prompts.py  service.py
src/free_imagegen/resources/: custom-svg-best-practices.md  custom-svg.story-plan.sample.json  providers.md  story-plan.agent-prompt.md  story-plan.guide.md  story-plan.schema.json  story-plan.template.json
tests/: test_api.py  test_cli.py
