[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "free-imagegen"
version = "0.3.0"
description = "LLM-powered prompt-to-image CLI renderer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
free-imagegen = "free_imagegen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
free_imagegen = ["resources/*.json", "resources/*.md"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
